Repositioned thumbnails to right of vote arrows. Made thumbnails round. Added Thumbnails for YouTube videos. Changed sidebar toggle button. Changed sidebar to fixed position so that when toggled further down the page, it is still visible.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -316,6 +316,92 @@ p.minimise {
   word-wrap: break-word;
 }
 
+div.default-thumb {
+  background-image: url(https://i.imgur.com/GK3uwxk.png) !important;
+}
+
+div.link-thumb {
+  width: 60px;
+  height: 60px;
+  float: left;
+  margin-right: 15px;
+  margin-top: -4px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  border-radius: 30px;
+  position: relative
+}
+
+div.text-thumb {
+  width: 60px;
+  height: 60px;
+  float: left;
+  margin-right: 15px;
+  margin-top: -4px;
+  background-image: url(https://i.imgur.com/6bB8Y9o.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  border-radius: 30px;
+  position: relative
+}
+
+.thumb-href {
+  position:absolute;
+  top:0px;
+  left:0px;
+  width:100%;
+  height:100%;
+  display:inline;
+}
+
+
+
+.btn-round {
+  background-color: #d23f31;
+  border-radius: 999em;
+  width: 56px;
+  height: 56px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  line-height: 0;
+  font-size: 30px;
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+}
+
+.btn-round span {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  margin-top: -1px;
+  color: #FFF;
+  line-height: 0;
+}
+
+.green { background-color: #57A429; }
+.blue { background-color: #38818F;}
+.orange { background-color: #D28031; }
+
+
+#sidebar-wrapper {
+  position: fixed !important;
+  top: 0px;
+}
+
+.sidebar-spacer {
+  margin-top: 57px;
+}
+
+.navbar-inverse {
+  z-index: 5555;
+}
+
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Chrome/Safari/Opera */
